--- a/app/views/notices/shop_employer_notices/5_employer_renewal_notice.html.erb
+++ b/app/views/notices/shop_employer_notices/5_employer_renewal_notice.html.erb
@@ -13,7 +13,7 @@
 <table class="total_table" border="0">
   <tbody>
     <tr>
-      <td><h3>RE: Action Required for Renewal on <%= Settings.site.short_name %></h3></td>
+      <td><h3>Action Required for Renewal on <%= Settings.site.short_name %></h3></td>
     </tr>
   </tbody>
 </table>
@@ -36,15 +36,15 @@
 <%= render partial: 'notices/shared/unordered_list', locals: {
     previous: "Employer Renewal Process:",
     listings: [
-      ["<span class='mar20'><strong>Review “Draft Renewal Plan Year” on the Benefits tab of your My #{Settings.site.short_name} employer account.</strong></span>", 
+      ["<span class='mar20'><strong>Review “Draft Renewal Plan Year” on the Benefits tab of your My #{Settings.site.short_name} employer account.</strong></span>",
         ["Your draft renewal plan year is setup with the same selections you made for your current plan year, including plan offerings, reference plan, contributions, and family member eligibility. You can make changes to these selections for the upcoming plan year if you’d like by clicking the Edit Plan Year button.", "Please select your Open Enrollment dates to start right away so that your employees can maximize their time to review their plan options. The latest date to end your open enrollment period is #{notice.plan_year.start_on.last_month.strftime("%m/#{Settings.aca.shop_market.renewal_application.monthly_open_enrollment_end_on}/%Y")}.", "If you’d like to keep the same selections in the upcoming plan year, review your open enrollment dates and then proceed to the next step."]
-      ], 
-      ["<span class='mar20'><strong>Publish your “Renewal Plan Year” on the Benefits tab of your My #{Settings.site.short_name} employer account.</strong></span>", 
+      ],
+      ["<span class='mar20'><strong>Publish your “Renewal Plan Year” on the Benefits tab of your My #{Settings.site.short_name} employer account.</strong></span>",
         ["Once you have reviewed and finalized your selections for the upcoming renewal plan year, click the Publish Plan Year button.", "Note: Only publish the plan year when you have made your final decision."]
-      ], 
-      ["<span class='mar20'><strong>Employee Renewal Open Enrollment Period</strong></span>", 
+      ],
+      ["<span class='mar20'><strong>Employee Renewal Open Enrollment Period</strong></span>",
         ["After you finalize your renewal plan year by publishing it, your employees will be able to log in to their My #{Settings.site.short_name} employee accounts, review their plan options for the upcoming plan year, and make any necessary changes to their plan selections. To shop for #{notice.plan_year.start_on.strftime("%Y")} plans your employees will need to click “Shop for Plans”.  Note:  If employees take no action during the employee renewal open enrollment period, they will be automatically re-enrolled in the same health plan for the upcoming plan year.", "See the attached guides for your employees to walk them through the employee renewal open enrollment process."]
-      ], 
+      ],
     ]
     } %>
 
