--- a/app/views/broker_agencies/broker_roles/_existing_broker_agency_form.html.erb
+++ b/app/views/broker_agencies/broker_roles/_existing_broker_agency_form.html.erb
@@ -30,7 +30,7 @@
             <h4><%=l10n("broker_agencies.broker_roles.select_your_broker_agency")%></h4>
             <div class="col-md-4 col-sm-6 col-xs-12 input-group input-no-pd">
               <%= f.hidden_field :broker_agency_id %>
-              <%= text_field_tag :agency_search, nil, placeholder: 'Name/FEIN', class: 'form-control' %>
+              <%= text_field_tag :agency_search, nil, placeholder: 'Agency/Broker Name, NPN', class: 'form-control' %>
               <div class="input-group-btn">
                 <a href="#" onclick="return false;" class="btn btn-select search" data-loading-text="Loading..."><i class="fa fa-search"></i><%= l10n("search").to_s.downcase%></a>
               </div>
