--- a/app/views/shared/_my_portal_links.html.erb
+++ b/app/views/shared/_my_portal_links.html.erb
@@ -10,7 +10,7 @@
     <span>
       <%= link_to l10n(".my_insured_portal"), family_account_path(tab: 'home'), class: 'header-text' if insured %>
       <%= link_to "My Employer Portal", new_employers_employer_profile_path, class: 'header-text' if employer_staff.present? %>
-      <%= link_to "My Broker Agency Portal", broker_agencies_root_path, class: 'header-text' if broker %>
+      <%= link_to "My Broker Agency Portal", main_app.broker_agencies_root_path, class: 'header-text' if broker %>
       <span> | </span>
     </span>
     <%elsif portal_count > 1 %>
