--- a/app/views/insured/plan_shoppings/_plan_filters.html.erb
+++ b/app/views/insured/plan_shoppings/_plan_filters.html.erb
@@ -38,7 +38,7 @@
             <%if @hbx_enrollment.effective_on.year == 2019%>
             <%=link_to l10n("confirm") , @dc_individual_checkbook_url, class: "btn btn-primary checkbook_url" %>
             <% elsif @hbx_enrollment.effective_on.year == 2018%>
-            <%=link_to l10n("confirm") , @dc_individual_checkbook_previous_year , class: "btn btn-primary", target: '_blank' %>
+            <%=link_to l10n("confirm") , @dc_individual_checkbook_previous_year , class: "btn btn-primary" %>
             <% end %>
           </center>
           </div>
@@ -61,7 +61,7 @@
           <div class="modal-footer" style="padding:10px">
             <center>
             <button type="button" class="btn btn-default btn-default" data-dismiss="modal">Cancel</button> 
-            <%=link_to l10n("confirm") , 'https://dc.checkbookhealth.org/sadpi/dc/2019/', class: "btn btn-primary", target: '_blank'  %>
+            <%=link_to l10n("confirm") , 'https://dc.checkbookhealth.org/sadpi/dc/2019/', class: "btn btn-primary" %>
           </div>
         </center>
        </div>
@@ -82,7 +82,7 @@
           <div class="modal-footer" style="padding:10px">
             <center>
             <button type="button" class="btn btn-default btn-default" data-dismiss="modal">Cancel</button>
-            <%=link_to l10n("confirm") , 'https://dc.checkbookhealth.org/dc/', class: "btn btn-primary  mtz", target: '_blank'  %>
+            <%=link_to l10n("confirm") , 'https://dc.checkbookhealth.org/dc/', class: "btn btn-primary  mtz"  %>
           </div>
         </center>
        </div>
@@ -103,7 +103,7 @@
           <div class="modal-footer" style="padding:10px">
             <center>
             <button type="button" class="btn btn-default btn-default" data-dismiss="modal">Cancel</button>
-            <%=link_to l10n("confirm") , @dc_checkbook_url , class: "btn btn-primary", target: '_blank' %>
+            <%=link_to l10n("confirm") , @dc_checkbook_url , class: "btn btn-primary" %>
           </div>
         </center>
        </div>
@@ -124,7 +124,7 @@
           <div class="modal-footer" style="padding:10px">
             <center>
             <button type="button" class="btn btn-default btn-default" data-dismiss="modal">Cancel</button>
-            <%=link_to l10n("confirm") , Rails.application.config.checkbook_services_base_url + '/dcshopnationwide/' , class: "btn btn-primary", target: '_blank' %>
+            <%=link_to l10n("confirm") , Rails.application.config.checkbook_services_base_url + '/dcshopnationwide/' , class: "btn btn-primary" %>
           </div>
         </center>
        </div>
