--- a/app/views/exchanges/hbx_profiles/shared/_primary_nav.html.erb
+++ b/app/views/exchanges/hbx_profiles/shared/_primary_nav.html.erb
@@ -12,7 +12,7 @@
           <ul class="dropdown-menu">
             <%= render partial: 'exchanges/hbx_profiles/shared/nav_link', locals: {
               tab_name: 'families',
-              link_path: family_index_dt_exchanges_hbx_profiles_path,
+              link_path: main_app.family_index_dt_exchanges_hbx_profiles_path,
               display_name: 'Families',
               active_tab: active_tab,
               remote: true,
@@ -21,25 +21,13 @@
             } %>
             <%= render partial: 'exchanges/hbx_profiles/shared/nav_link', locals: {
               tab_name: 'outstanding-verifications',
-              link_path: outstanding_verification_dt_exchanges_hbx_profiles_path,
+              link_path: main_app.outstanding_verification_dt_exchanges_hbx_profiles_path,
               display_name: 'Outstanding Verifications',
               active_tab: active_tab,
               remote: true,
               pundit_object: HbxProfile,
               pundit_method: :can_access_outstanding_verification_sub_tab?
             } %>
-            <%= render partial: 'exchanges/hbx_profiles/shared/nav_link', locals: {
-                                                                            tab_name: 'families',
-                                                                            link_path: main_app.family_index_dt_exchanges_hbx_profiles_path,
-                                                                            display_name: 'Families',
-                                                                            active_tab: active_tab
-                                                                          } %>
-              <%= render partial: 'exchanges/hbx_profiles/shared/nav_link', locals: {
-                                                                              tab_name: 'outstanding-verifications',
-                                                                              link_path: main_app.outstanding_verification_dt_exchanges_hbx_profiles_path,
-                                                                              display_name: 'Outstanding Verifications',
-                                                                              active_tab: active_tab
-                                                                            } %>
              <%= render partial: 'exchanges/hbx_profiles/shared/nav_link', locals: {
               tab_name: 'new-consumer-application',
               link_path: main_app.begin_consumer_enrollment_exchanges_agents_path(original_application_type: 'phone'),
@@ -85,12 +73,12 @@
           <% end %>
         </li>
 
-	        <li role="presentation"<%= menu_tab_class(active_tab, "user-accounts") %> class="<%=pundit_class HbxProfile, :can_access_user_account_tab?%>">
-	          <%= link_to(user_account_index_exchanges_hbx_profiles_path, :remote => true, "aria-expanded" => "true", "aria-controls" => "user-accounts", "role" => "tab" ) do  %>
-	              <span class="hidden-xs">User Accounts</span>
-	              <span class="glyphicon glyphicon-th-list hidden-md hidden-sm hidden-lg" title="User Account"></span>
-	          <% end %>
-	        </li>
+          <li role="presentation"<%= menu_tab_class(active_tab, "user-accounts") %> class="<%=pundit_class HbxProfile, :can_access_user_account_tab?%>">
+            <%= link_to(main_app.user_account_index_exchanges_hbx_profiles_path, :remote => true, "aria-expanded" => "true", "aria-controls" => "user-accounts", "role" => "tab" ) do  %>
+                <span class="hidden-xs">User Accounts</span>
+                <span class="glyphicon glyphicon-th-list hidden-md hidden-sm hidden-lg" title="User Account"></span>
+            <% end %>
+          </li>
 
         <li role="presentation"<%= menu_tab_class(active_tab, "broker-agencies-tab") %>>
          <%= link_to(main_app.broker_agency_index_exchanges_hbx_profiles_path, :remote => true, "aria-expanded" => "true", "aria-controls" => "broker_agencies", "role" => "tab" ) do  %>
