--- a/app/views/exchanges/hbx_profiles/shared/_primary_nav.html.erb
+++ b/app/views/exchanges/hbx_profiles/shared/_primary_nav.html.erb
@@ -74,7 +74,7 @@
         </li>
 
 	        <li role="presentation"<%= menu_tab_class(active_tab, "user-accounts") %> class="<%=pundit_class HbxProfile, :can_access_user_account_tab?%>">
-	          <%= link_to(user_account_index_exchanges_hbx_profiles_path, :remote => true, "aria-expanded" => "true", "aria-controls" => "user-accounts", "role" => "tab" ) do  %>
+	          <%= link_to(main_app.user_account_index_exchanges_hbx_profiles_path, :remote => true, "aria-expanded" => "true", "aria-controls" => "user-accounts", "role" => "tab" ) do  %>
 	              <span class="hidden-xs">User Accounts</span>
 	              <span class="glyphicon glyphicon-th-list hidden-md hidden-sm hidden-lg" title="User Account"></span>
 	          <% end %>
