--- a/app/views/exchanges/hbx_profiles/_oe_extended_applications.html.erb
+++ b/app/views/exchanges/hbx_profiles/_oe_extended_applications.html.erb
@@ -24,7 +24,7 @@
           <td><%= TimeKeeper.local_time(plan_year.created_at).strftime('%m/%d/%Y %I:%M%p') %></td>
           <td><%= TimeKeeper.local_time(plan_year.updated_at).strftime('%m/%d/%Y %I:%M%p') %></td>
           <td>
-            <%= link_to l10n('hbx_profiles.close_open_enrollment'), main_app.close_extended_open_enrollment_exchanges_hbx_profiles_path(id: @employer_profile.id, plan_year_id: plan_year.id), :method => :post, :role => 'button', :class => "btn btn-primary btn-sm #{pundit_class HbxProfile, :can_extend_open_enrollment? }" %>
+            <%= link_to l10n('hbx_profiles.close_open_enrollment'), close_extended_open_enrollment_exchanges_hbx_profiles_path(id: @employer_profile.id, plan_year_id: plan_year.id), :method => :post, :role => 'button', :class => "btn btn-primary btn-sm #{pundit_class HbxProfile, :can_extend_open_enrollment? }" %>
           </td>
         </tr>
         <% end %>
