--- a/app/views/shared/engines/_broker_menu.html.erb
+++ b/app/views/shared/engines/_broker_menu.html.erb
@@ -1,3 +1,4 @@
+<% @broker_agency_profile ||= @profile%>
  <div class="mainmenu">
     <div class="container">
       <ul role="tablist" class="list-unstyled list-inline" id="myTab">
