--- a/app/views/insured/families/healthcare_for_childcare_program_form.html.erb
+++ b/app/views/insured/families/healthcare_for_childcare_program_form.html.erb
@@ -1,16 +1,17 @@
 <% content_for :navigation do %>
-  <%= render :partial => 'ui-components/v1/navs/employers_navigation', :locals => {:active_tab=>params[:tab], organization: @employer_profile.organization, profile: @employer_profile} %>
+  <%= render partial: 'ui-components/v1/navs/families_navigation' %>
 <% end %>
 
 <div class="employer-edit-tab">
   <h1 class="heading-text"><strong>HC4CC Eligibility Year(s)</strong></h1>
-  <h3 class="heading-text"><strong><%= @employer_profile.legal_name %></strong></h3>
+  <h3 class="heading-text"><strong><%= @person.full_name.titleize %></strong></h3>
   <p><%= l10n('select_years_osse_offered') %></p>
   <div class="row no-buffer vertically-aligned-row">
     <p><%= l10n('osse_multi_year_description') %></p>
   </div>
 
-  <%= form_tag(profiles_employers_employer_profile_update_osse_eligibilities_path(employer_profile_id: @employer_profile.id), method: "post") do %>
+  <%= form_tag(update_osse_eligibilities_insured_families_path(person_id: @person.id), method: "put") do %>
+    <%= hidden_field_tag 'eligibilities[person_id]', @person.id %>
     <%= submit_tag "Save Changes", class: 'btn btn-primary active pull-left col-12', style: 'background-color: #007bc4'%></br>
     <div class='table-responsive col-12 mt-3' style="padding-top: 10px">
       <table style='width: 70%; border-collapse: collapse; border: 0px solid #d5d5d5'>
@@ -24,7 +25,7 @@
           <tr style='border: 0px solid #d5d5d5; height: 50px; '>
             <td style='padding: 20px'><strong><%= year %></strong></td>
             <td><%= radio_button_tag "eligibilities[osse][#{year}]", "true", @osse_status_by_year[year][:is_eligible], class: "radio-button",  disabled: !pundit_allow(HbxProfile, :can_edit_osse_eligibility?) %></td>
-            <td><%= radio_button_tag "eligibilities[osse][#{year}]", "false", !@osse_status_by_year[year][:is_eligible], class: "radio-button", disabled: !pundit_allow(HbxProfile, :can_edit_osse_eligibility?) %></td>
+            <td><%= radio_button_tag "eligibilities[osse][#{year}]", "false", !@osse_status_by_year[year][:is_eligible], class: "radio-button",  disabled: !pundit_allow(HbxProfile, :can_edit_osse_eligibility?) %></td>
             <% if @osse_status_by_year[year][:start_on].present? %>
               <td><%= "#{@osse_status_by_year[year][:start_on].to_s} - #{@osse_status_by_year[year][:end_on].to_s}" %></td>
             <% end %>
