--- a/components/financial_assistance/app/views/financial_assistance/applications/verifications/_admin_verification_actions.html.erb
+++ b/components/financial_assistance/app/views/financial_assistance/applications/verifications/_admin_verification_actions.html.erb
@@ -104,7 +104,7 @@
             <tr>
               <th scope="row"><%= index + 1 %></th>
               <td><%= record&.date_of_action&.in_time_zone('Eastern Time (US & Canada)') %></td>
-              <td><%= record.is_a?(Eligibilities::RequestResult) ? 'Hub Call' : record.action.capitalize %></td>
+              <td><%= (record.is_a?(Eligibilities::RequestResult) && record.action.nil?) ? 'Hub Call' : record.action.capitalize %></td>
               <td><%= record.is_a?(Eligibilities::RequestResult) ? record.source_transaction_id : record.updated_by %></td>
               <td><%= record.is_a?(Eligibilities::RequestResult) ? 'Fdsh Hub Call' : record.update_reason %></td>
               <% if record.is_a?(Eligibilities::RequestResult) %>
