--- a/app/views/ui-components/v1/cards/_metal_level_select.html.slim
+++ b/app/views/ui-components/v1/cards/_metal_level_select.html.slim
@@ -24,18 +24,21 @@
       .card-body
         ul.nav.nav-tabs role="tablist"
           input#ppKind type="hidden" name="benefit_package[sponsored_benefits_attributes][0][product_package_kind]"
-          li.col-md-4.col-sm-4 role="presentation" onclick="radioSelected(this)"
-            a href="#carrier" aria-controls="carrier" role="tab" data-toggle="tab" data-name="single_issuer"
-              i.far.fa-circle.mr-2
-              = fetch_plan_title_for_single_carrier
-          li.col-md-4.col-sm-4 role="presentation" onclick="radioSelected(this)"
-            a href="#level" aria-controls="level" role="tab" data-toggle="tab" data-name="metal_level"
-              i.far.fa-circle.mr-2
-              = fetch_plan_title_for_metal_level
-          li.col-md-4.col-sm-4 role="presentation" onclick="radioSelected(this)"
-            a href="#plan" aria-controls="plan" role="tab" data-toggle="tab" data-name="single_product"
-              i.far.fa-circle.mr-2
-              = fetch_plan_title_for_single_plan
+          - if @benefit_package_form.health_package_kinds.include?(:single_issuer)
+            li.col-md-4.col-sm-4 role="presentation" onclick="radioSelected(this)"
+              a href="#carrier" aria-controls="carrier" role="tab" data-toggle="tab" data-name="single_issuer"
+                i.far.fa-circle.mr-2
+                = fetch_plan_title_for_single_carrier
+          - if @benefit_package_form.health_package_kinds.include?(:metal_level)
+            li.col-md-4.col-sm-4 role="presentation" onclick="radioSelected(this)"
+              a href="#level" aria-controls="level" role="tab" data-toggle="tab" data-name="metal_level"
+                i.far.fa-circle.mr-2
+                = fetch_plan_title_for_metal_level
+          - if @benefit_package_form.health_package_kinds.include?(:single_product)
+            li.col-md-4.col-sm-4 role="presentation" onclick="radioSelected(this)"
+              a href="#plan" aria-controls="plan" role="tab" data-toggle="tab" data-name="single_product"
+                i.far.fa-circle.mr-2
+                = fetch_plan_title_for_single_plan
         .tab-content
           .tab-pane.fade#carrier role="tabpanel"
             h4
