--- a/app/assets/stylesheets/application.scss.erb
+++ b/app/assets/stylesheets/application.scss.erb
@@ -17,6 +17,7 @@
  *= require_self
  */
 
+ @import "variables";
 
  .fifteen-px-bottom-margin {
   margin-bottom: 15px !important;
@@ -394,4 +395,9 @@ td.current-aptc-csr-data {
 .mb0
 {
   margin-bottom:0px;
+}
+
+//fix browser default of purple
+input[type="checkbox"] {
+  accent-color: $primary-color !important;
 }
