--- a/app/views/exchanges/hbx_profiles/_edit_enrollment.html.erb
+++ b/app/views/exchanges/hbx_profiles/_edit_enrollment.html.erb
@@ -21,7 +21,7 @@
             <div class="col-md-3 col-sm-3 col-xs-12 form-group form-group-lg no-pd">
               New SSN
               <%= f.text_field :ssn, placeholder: "#{l10n("social_security").to_s.upcase}", class: "required mask-ssn input_txt",
-                pattern: "(?!666|000|9\\d{2})\\d{3}[\\- ]{0,1}(?!00)\\d{2}[\\- ]{0,1}(?!0{4})\\d{4}", oninvalid: "this.setCustomValidity('Invalid Social Security number.')",
+                pattern: "(?!666|000|9\\d{2})\\d{3}[\\- ]{0,1}(?!00)\\d{2}[\\- ]{0,1}(?!0{4})\\d{4}", oninvalid: "this.setCustomValidity('Invalid Social Security number.')", oninput: "this.setCustomValidity('')",
                 :value => params[:new_ssn].present? ? params[:new_ssn] : @person.ssn, required: params[:new_ssn].present? ? true : false, :input_html => {:maxlength => 15, :size => 40, :width => '100%'} %>
               <%= f.hidden_field :dob, :value => params[:new_dob].present? ? Date.strptime(params[:new_dob], '%m/%d/%Y').to_formatted_s(:db) : @person.dob.to_formatted_s(:db) %>
               <%= f.hidden_field :pid, :value => @person.id  %>
