--- a/app/views/insured/family_members/_dependent_form.html.erb
+++ b/app/views/insured/family_members/_dependent_form.html.erb
@@ -107,7 +107,7 @@
               <div class="form-group form-group-lg">
                 <%= f.text_field :ssn, value: dependent.ssn,class: "home required floatlabel form-control mask-ssn",
                   pattern: "(?!666|000|9\\d{2})\\d{3}[\\- ]{0,1}(?!00)\\d{2}[\\- ]{0,1}(?!0{4})\\d{4}", oninvalid: "this.setCustomValidity('Invalid Social Security number.')",
-                  placeholder: "#{l10n("social_security").to_s.upcase}" %>
+                  oninput: "this.setCustomValidity('')", placeholder: "#{l10n("social_security").to_s.upcase}" %>
               </div>
             </div>
 
