--- a/app/views/exchanges/hbx_profiles/_edit_enrollment.html.erb
+++ b/app/views/exchanges/hbx_profiles/_edit_enrollment.html.erb
@@ -1,10 +1,10 @@
-<%if @error_on_save %>
+<% if @error_on_save %>
   <div class='alert alert-error'><a class='close' data-dismiss='alert'>x</a>
     <%@error_on_save.each do |err|%>
       <li><%=err[1][0]%></li>
-    <%end%>
+    <% end %>
   </div>
-<%end%>
+<% end %>
 <div id="add_sep">
   <div class="bottom-pd">
     <%= form_for @person, remote: true, url: update_dob_ssn_path, method: "post", class: "form" do |f|%>
@@ -13,38 +13,45 @@
         <h3 class="title">Edit DOB / SSN</h3>
           <div class="col-md-12 no-pd col-sm-12 col-xs-12">
             <div class="col-md-3 col-md-offset-3 col-sm-3 col-md-offset-3 col-xs-12 form-group form-group-lg no-pd">
-              New DOB 
-              <%= datepicker_control f, :dob, {:class => "interaction-field-control-census-employee-dob input_txt", :value => params[:new_dob].present? ? Date.strptime(params[:new_dob], '%m/%d/%Y') : @person.dob, :placeholder => "DATE OF BIRTH", :'data-date-min' => "-110y", :'data-date-max' => "+0", required: true, :onchange => "check_dob_change_implication('#{@person.id}', this.value, '#{@element_to_replace_id}')"} 
-              %>
-            </div> 
+              New DOB
+              <%= datepicker_control f, :dob, {:class => "interaction-field-control-census-employee-dob input_txt",
+                :value => params[:new_dob].present? ? Date.strptime(params[:new_dob], '%m/%d/%Y') : @person.dob, :placeholder => "DATE OF BIRTH", :'data-date-min' => "-110y", :'data-date-max' => "+0",
+                required: true, :onchange => "check_dob_change_implication('#{@person.id}', this.value, '#{@element_to_replace_id}')"}%>
+            </div>
             <div class="col-md-3 col-sm-3 col-xs-12 form-group form-group-lg no-pd">
               New SSN
-              <%= f.text_field :ssn, placeholder: "SOCIAL SECURITY", class: "required mask-ssn input_txt", :value => params[:new_ssn].present? ? params[:new_ssn] : @person.ssn, required: params[:new_ssn].present? ? true : false, :input_html => {:maxlength => 15, :size => 40, :width => '100%'} 
-              %>
-              <%= f.hidden_field :dob, :value => params[:new_dob].present? ? Date.strptime(params[:new_dob], '%m/%d/%Y').to_formatted_s(:db) : @person.dob.to_formatted_s(:db) %>  
+              <% if EnrollRegistry.feature_enabled?(:ssn_ui_validation) %>
+                <%= f.text_field :ssn, placeholder: "#{l10n("social_security").to_s.upcase}", class: "required mask-ssn input_txt",
+                  pattern: "(?!666|000|9\\d{2})\\d{3}[\\- ]{0,1}(?!00)\\d{2}[\\- ]{0,1}(?!0{4})\\d{4}", oninvalid: "this.setCustomValidity('Invalid Social Security number.')", oninput: "this.setCustomValidity('')",
+                  :value => params[:new_ssn].present? ? params[:new_ssn] : @person.ssn, required: params[:new_ssn].present? ? true : false, :input_html => {:maxlength => 15, :size => 40, :width => '100%'} %>
+              <% else %>
+                <%= f.text_field :ssn, placeholder: "SOCIAL SECURITY", class: "required mask-ssn input_txt",
+                  :value => params[:new_ssn].present? ? params[:new_ssn] : @person.ssn, required: params[:new_ssn].present? ? true : false, :input_html => {:maxlength => 15, :size => 40, :width => '100%'} %>
+              <% end %>
+              <%= f.hidden_field :dob, :value => params[:new_dob].present? ? Date.strptime(params[:new_dob], '%m/%d/%Y').to_formatted_s(:db) : @person.dob.to_formatted_s(:db) %>
               <%= f.hidden_field :pid, :value => @person.id  %>
               <%= f.hidden_field :family_actions_id, :value => "family_actions_#{@person.primary_family.id.to_s}" %>
             </div>
           </div>
       </div>
       <div class="row no-buffer child-row">
-        <div class="col-md-12 no-pd col-sm-12 col-xs-12">   
+        <div class="col-md-12 no-pd col-sm-12 col-xs-12">
           <%= link_to "Reset", edit_dob_ssn_path(id: @person.id, family_actions_id: "family_actions_#{@person.primary_family.id.to_s}"), class: "btn btn-info", remote: true %>
           <%= f.submit "Update", 'data-disable-with' => l10n("please_wait"), data: { confirm: 'Are you sure?' }, :class => "btn btn-primary", :size => '100px'%>
         </div>
-      </div>        
+      </div>
     <% end %>
   </div>
 </div>
-<%if @premium_implications.present?%> 
-  <div class="alert alert-warning row"> 
-    <span class="glyphicon glyphicon-warning-sign gi" aria-hidden="true"></span> 
+<% if @premium_implications.present?%>
+  <div class="alert alert-warning row">
+    <span class="glyphicon glyphicon-warning-sign gi" aria-hidden="true"></span>
     <b>
       Active enrollment(s) for this person exists. Updating DOB has implications as it could result in the change of premium for the following enrollment(s):
     </b>
     <%@premium_implications.each do |key, val|%>
       <li><%=find_plan_name(key)%></li>
-    <%end%> 
+    <% end %>
   </div>
-<%end%>
+<% end %>
 <%#= link_to "Back to Families Index", family_index_exchanges_hbx_profiles_path(q: params[:search_query], families_page: params[:pg_no]), remote: true, class: 'btn btn-default' %>
