--- a/app/views/insured/plan_shoppings/show.html.slim
+++ b/app/views/insured/plan_shoppings/show.html.slim
@@ -79,7 +79,7 @@
           span aria-hidden="true" &times;
         h4.modal-title = l10n("plan_compare_alert")
       .modal-body
-        p' = l10n(".can_not_select_more_than_n_plans_to_compare", number: 3)
+        p = l10n(".can_not_select_more_than_n_plans_to_compare", number: 3)
       .modal-footer
         button.btn.btn-default type="button" data-dismiss="modal" Close
 
