--- a/components/financial_assistance/app/views/financial_assistance/applicants/_edit.html.erb
+++ b/components/financial_assistance/app/views/financial_assistance/applicants/_edit.html.erb
@@ -57,13 +57,7 @@
           </div>
         <div class="col-md-3 col-sm-3 no-pd">
           <div class="form-group form-group-lg">
-            <% if EnrollRegistry.feature_enabled?(:ssn_ui_validation) %>
-              <%= f.text_field :ssn, class: "home required floatlabel form-control mask-ssn", placeholder: "#{l10n("social_security").to_s.upcase}",
-                pattern: "(?!666|000|9\\d{2})\\d{3}[\\- ]{0,1}(?!00)\\d{2}[\\- ]{0,1}(?!0{4})\\d{4}", oninvalid: "this.setCustomValidity('Invalid Social Security number.')",
-                oninput: "this.setCustomValidity('')", readonly: readonly_status %>
-            <% else %>
-              <%= f.text_field :ssn, class: "home required floatlabel form-control mask-ssn", placeholder: "#{l10n("social_security").to_s.upcase}", readonly: readonly_status %>
-            <% end %>
+            <%= f.ssn_field :ssn, readonly: readonly_status, class: "home" %>
           </div>
         </div>
 
