--- a/app/views/employers/census_employees/_member_fields.html.erb
+++ b/app/views/employers/census_employees/_member_fields.html.erb
@@ -28,15 +28,7 @@
       </div>
       <div class="col-md-3 col-sm-3 col-xs-12 form-group form-group-lg no-pd">
         <% is_required = !@no_ssn || (@census_employee.no_ssn_allowed && !@employer_profile.active_benefit_sponsorship.is_no_ssn_enabled && @census_employee.encrypted_ssn.present?) ? true : false %>
-
-        <% if EnrollRegistry.feature_enabled?(:ssn_ui_validation) %>
-          <%= f.text_field :ssn, placeholder: (is_required ? l10n('census_employee.ssn_text') : "#{l10n("social_security").to_s.upcase}"), class: "required floatlabel mask-ssn form-control",
-            pattern: "(?!666|000|9\\d{2})\\d{3}[\\- ]{0,1}(?!00)\\d{2}[\\- ]{0,1}(?!0{4})\\d{4}", oninvalid: "this.setCustomValidity('Invalid Social Security number.')",
-            oninput: "this.setCustomValidity('')", input_html: {value: "", maxlength: 11}, required: is_required, readonly: !may_update_census_employee?(f.object) %>
-        <% else %>
-          <%= f.text_field :ssn, placeholder: (is_required ? l10n('census_employee.ssn_text') : "SOCIAL SECURITY"), class: "required floatlabel mask-ssn form-control",
-            input_html: {value: "", maxlength: 11}, required: is_required, readonly: !may_update_census_employee?(f.object) %>
-        <% end %>
+        <%= f.ssn_field :ssn, required: is_required, readonly: !may_update_census_employee?(f.object)  %>
       </div>
 
       <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 form-group form-group-lg no-pd no-border-xs">
