--- a/app/views/insured/group_selection/new.html.erb
+++ b/app/views/insured/group_selection/new.html.erb
@@ -3,6 +3,8 @@
 <% end %>
 <% effective_date_for_display = @effective_on_date || @new_effective_on %>
 <div class="container group-selection">
+  <%= hidden_field_tag(:ivl_effective_on, @ivl_effective_on) %>
+  <%= hidden_field_tag(:shop_effective_on, @shop_effective_on) %>
   <div class="row">
     <%= form_tag(:insured_group_selections, :id => "group-selection-form") do %>
       <div class="col-xs-8">
@@ -10,7 +12,7 @@
         <p class="twenty">Select who needs coverage and the type of coverage needed. When you’re finished, select CONTINUE.</p>
         <div id="effective_date" style="font-size :24px">
         <%if @effective_on_date.present? || @new_effective_on%>
-          <%= l10n("insured.group_selection.new.effective_date") %>: <span style="color: red;"><%= format_date(effective_date_for_display) %></span>
+          <%= l10n("insured.group_selection.new.effective_date") %>: <span style="color: red;" id='effective_date_for_display'><%= format_date(effective_date_for_display) %></span>
         <%end%>
         </div>
         <h3><%= l10n("insured.group_selection.new.who_needs_coverage") %></h3>
